[package]
name = "liveu_stats_bot"
version = "0.2.0"
authors = ["Brian Spit <brian@mythenatic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
quick-xml = {version = "0.21", features = ["serialize"]}
read_input = "0.8"
reqwest = { version = "0.11", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.5", features = ["macros", "rt", "rt-multi-thread"] }
twitch-irc = "2.2"
uuid = { version = "0.8", features = ["v4"] }
