[package]
name = "liveu_stats_bot"
version = "0.6.1"
authors = ["Brian Spit <brian@715209.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
quick-xml = {version = "0.26", features = ["serialize"]}
read_input = "0.8"
reqwest = { version = "0.12", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.5", features = ["macros", "rt", "rt-multi-thread"] }
twitch-irc = "3.0"
uuid = { version = "1.8", features = ["v4"] }
